[package]
name = "TransLatOCR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
tesseract = "0.13.0"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
winit = "0.28.3"
wgpu = "0.15.1"
